--- a/presentation/index.html
+++ b/presentation/index.html
@@ -16,14 +16,10 @@
 					<div class="dropdown">
 						<button class="dropbutton">Sign in</button>
 						<div class="dropdown-content">
-							<form action="../business/business.php" method="post">
-								<p>Username</p>
-								<input class="inputforms" type="text" name="pk_username" value="Your username">
-								<p>Password</p>
-								<input class="inputforms"type="text" name="userpassword" value="Your password">
-								<a class="inputforms" href="#">Login</a>
-								<input class="inputforms" type="submit" value="Register">
-							</form>
+							<a class="inputforms" href="#">Username</a>
+							<a class="inputforms" href="#">Password</a>
+							<a class="inputforms" href="#">Login</a>
+							<a class="inputforms" href="#">Register</a>
 						</div>
 					</div>
 					<img id="owl" src="./img/owl.jpg" alt="Shopping Owl"/>
