category nur mehr im select

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -47,11 +47,11 @@
 					<p class="title2">Category</p>
 					<form action="../business/business.php" method="post" class="filtercontent"> 
 						<select name="category">
-							<option name="categories">Show all categories</option> 
-							<option name="category">Balls</option> 
-							<option name="category">Books</option> 
-							<option name="category">Brooms</option> 
-							<option name="category">Clothing</option> 
+							<option>Show all categories</option> 
+							<option>Balls</option> 
+							<option>Books</option> 
+							<option>Brooms</option> 
+							<option>Clothing</option> 
 						</select>
 						<input type="submit" value="OK" class="filtercontent">
 					</form> 
